removed css for that div in & fixed nav bar issue with right nav overflowing

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -12,6 +12,8 @@
 
 .user-nav {
     background-color: rgba(21, 21, 23, .95);
+    width: 100%;
+    justify-content: space-between;
 }
 
 .flickor-logo {
@@ -37,15 +39,6 @@ a {
     flex-direction: column;
     align-items: flex-start;
 } */
-
-#nav-bar-ul {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px;
-    padding: 0px
-}
 
 #nonuser-flickor-li {
     padding-left: 20px;
@@ -162,7 +155,6 @@ a {
 }
 
 #your-photos {
-    padding-right: 1300px;
     padding-left: 30px;
 }
 
